--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,12 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        {#include bootstrap#}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+        {#end include bootstrap#}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -14,6 +19,40 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <header>
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Fixed navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item {{ app.request.get('_route') == 'index' ? 'active' }}">
+                            <a class="nav-link" href="{{ path('index') }}">Home</a>
+                        </li>
+                        <li class="nav-item {{ app.request.get('_route') == 'shopList' ? 'active' }}">
+                            <a class="nav-link" href="{{ path('shopList') }}">Магазин</a>
+                        </li>
+
+                    </ul>
+                    <div class="mt-2 mt-md-0">
+                        <a href="{{ path('shopCart') }}" class="btn btn-outline-success my-2 my-sm-0 {{ app.request.get('_route') == 'shopCart' ? 'active' }}">Basket</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="mt-5">
+        <main role="main" class="flex-shrink-0">
+            <div class="container">
+                <div class="mt-1">&nbsp;</div>
+                <div class="mt-2">
+                    {% block body %}{% endblock %}
+                </div>
+            </div>
+        </main>
+    </div>
     </body>
 </html>
