--- a/templates/index/shopCart.html.twig
+++ b/templates/index/shopCart.html.twig
@@ -17,14 +17,22 @@
         <h1>{{ title }}</h1>
         <hr>
 
+        {% set sum = 0 %}
+        {% for item in items %}
             <div class="col-md-12">
                 <div class="card mb-12 shadow-sm">
                     <div class="card-body">
-                        <h4>Title</h4>
-                        <p class="card-text">description</p>
-                        <h5>100 EUR</h5>
+                        <h4>{{ item.shopItem.title }}</h4>
+                        <p class="card-text">{{ item.shopItem.description }}</p>
+                        <h5>{{ item.shopItem.price }} EUR</h5>
+                        {% set sum = sum + item.shopItem.price %}
                     </div>
                 </div>
             </div>
+        {% endfor %}
+
+        <hr>
+        <h4>Итого: {{ sum }}</h4>
+
     </div>
 {% endblock %}
