Added func shopOrder for IndexController and order template to checkout order

--- a/templates/index/shopCart.html.twig
+++ b/templates/index/shopCart.html.twig
@@ -33,6 +33,6 @@
 
         <hr>
         <h4>Итого: {{ sum }}</h4>
-
+        <a href="{{ path('shopOrder') }}" class="float-right btn btn-success mt-2">checkout</a>
     </div>
 {% endblock %}
